tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-count-empty/expected.err
Error: invalid syntax: invalid symbolic subscript field declaration '.a[]:byte': empty array count; inside brackets: [
  .a[]:byte
]
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-garbage-count-empty/input.k65:2:3 ]
   │
 2 │   .a[]:byte
   │   ──┬─  
   │     ╰─── here
───╯
